# Plucks

./: CMakeLists.txt  CMakeLists.txt_osx_optimizations  CMakeLists_osx.txt  LuckyPlucker.jucer  PLUCKS_by_AmateurTools_DSP.jucer  README.md
.github/workflows/: windows.yml
BinaryData/: PluckSound.h  PluckVoice.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/: PluckVoice.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  StringBodyCoupling.h  TuningSystem.h
